# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci  pyci.yml
gendiff/: __init__.py  files_loader.py  formatter.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/generate/: __init__.py  files_loader.py  flat_parser.py  gen_diff.py  generate.py  generate_flat.py  generate_nested.py  json_loader.py  search_diff.py  yml_loader.py
gendiff/scripts/: gendiff.py
tests/: test_argparse.py  test_diff.py  test_files_loader.py  test_formatter.py  test_gendiff.py  test_gendiff_main.py  test_json.py  test_nested.py  test_plain.py  test_yml.py
tests/fixtures/: expectation_format_json.txt  expectation_nested_yml.txt  expectation_yaml.txt  file1.yml  file1_nested.yml  file2.yml  file2_nested.yml
